<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.rayanalkhelaiwi.musicalstructure.SongsList">

    <!--Activity Label in TextView-->
    <TextView
        android:id="@+id/SongsList_label_text_view"
        style="@style/activityLabel"
        android:text="@string/songs_list_label" />

    <!--Activity Description in TextView-->
    <TextView
        android:id="@+id/SongsList_description_text_view"
        style="@style/activityDescription"
        android:layout_below="@id/SongsList_label_text_view"
        android:text="@string/songs_list_description" />

    <!--Beginning of the 3 ImageViews at the top-->
    <ImageView
        android:id="@+id/SongsList_playing"
        style="@style/barTransitionButtons"
        android:layout_alignParentStart="true"
        android:layout_below="@id/SongsList_description_text_view"
        android:layout_marginStart="24dp"
        android:src="@drawable/playing" />

    <ImageView
        android:id="@+id/SongsList_artist_list"
        style="@style/barTransitionButtons"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/SongsList_description_text_view"
        android:layout_marginEnd="24dp"
        android:src="@drawable/artistlist" />

    <ImageView
        android:id="@+id/SongsList_payment"
        style="@style/barTransitionButtons"
        android:layout_below="@id/SongsList_description_text_view"
        android:layout_centerHorizontal="true"
        android:src="@drawable/payment" />
    <!--End of the 3 ImageViews at the top-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="280dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <!--Default icon for the song-->
            <ImageView
                android:id="@+id/SongsList_pic_one"
                style="@style/songsPics" />

            <!--Name of the artist-->
            <TextView
                style="@style/songsArtistsPaymentDetails"
                android:layout_alignTop="@id/SongsList_pic_one"
                android:layout_toEndOf="@id/SongsList_pic_one"
                android:text="@string/artist_one"
                android:textStyle="bold" />

            <!--Name of the song-->
            <TextView
                style="@style/songsArtistsPaymentDetails"
                android:layout_alignBottom="@id/SongsList_pic_one"
                android:layout_toEndOf="@id/SongsList_pic_one"
                android:text="@string/song_one" />

            <!--Default icon for the song-->
            <ImageView
                android:id="@+id/SongsList_pic_two"
                style="@style/songsPics"
                android:layout_marginTop="80dp" />

            <!--Name of the artist-->
            <TextView
                style="@style/songsArtistsPaymentDetails"
                android:layout_alignTop="@id/SongsList_pic_two"
                android:layout_toEndOf="@id/SongsList_pic_two"
                android:text="@string/artist_two"
                android:textStyle="bold" />

            <!--Name of the song-->
            <TextView
                style="@style/songsArtistsPaymentDetails"
                android:layout_alignBottom="@id/SongsList_pic_two"
                android:layout_toEndOf="@id/SongsList_pic_two"
                android:text="@string/song_two" />

            <!--Default icon for the song-->
            <ImageView
                android:id="@+id/SongsList_pic_three"
                style="@style/songsPics"
                android:layout_marginTop="160dp" />

            <!--Name of the artist-->
            <TextView
                style="@style/songsArtistsPaymentDetails"
                android:layout_alignTop="@id/SongsList_pic_three"
                android:layout_toEndOf="@id/SongsList_pic_three"
                android:text="@string/artist_three"
                android:textStyle="bold" />

            <!--Name of the song-->
            <TextView
                style="@style/songsArtistsPaymentDetails"
                android:layout_alignBottom="@id/SongsList_pic_three"
                android:layout_toEndOf="@id/SongsList_pic_three"
                android:text="@string/song_three" />

            <!--Default icon for the song-->
            <ImageView
                android:id="@+id/SongsList_pic_four"
                style="@style/songsPics"
                android:layout_marginTop="240dp" />

            <!--Name of the artist-->
            <TextView
                style="@style/songsArtistsPaymentDetails"
                android:layout_alignTop="@id/SongsList_pic_four"
                android:layout_toEndOf="@id/SongsList_pic_four"
                android:text="@string/artist_four"
                android:textStyle="bold" />

            <!--Name of the song-->
            <TextView
                style="@style/songsArtistsPaymentDetails"
                android:layout_alignBottom="@id/SongsList_pic_four"
                android:layout_toEndOf="@id/SongsList_pic_four"
                android:text="@string/song_four" />

            <!--Default icon for the song-->
            <ImageView
                android:id="@+id/SongsList_pic_five"
                style="@style/songsPics"
                android:layout_marginTop="320dp" />

            <!--Name of the artist-->
            <TextView
                style="@style/songsArtistsPaymentDetails"
                android:layout_alignTop="@id/SongsList_pic_five"
                android:layout_toEndOf="@id/SongsList_pic_five"
                android:text="@string/artist_five"
                android:textStyle="bold" />

            <!--Name of the song-->
            <TextView
                style="@style/songsArtistsPaymentDetails"
                android:layout_alignBottom="@id/SongsList_pic_five"
                android:layout_toEndOf="@id/SongsList_pic_five"
                android:text="@string/song_five" />

            <!--Default icon for the song-->
            <ImageView
                android:id="@+id/SongsList_pic_six"
                style="@style/songsPics"
                android:layout_marginTop="400dp" />

            <!--Name of the artist-->
            <TextView
                style="@style/songsArtistsPaymentDetails"
                android:layout_alignTop="@id/SongsList_pic_six"
                android:layout_toEndOf="@id/SongsList_pic_six"
                android:text="@string/artist_six"
                android:textStyle="bold" />

            <!--Name of the song-->
            <TextView
                style="@style/songsArtistsPaymentDetails"
                android:layout_alignBottom="@id/SongsList_pic_six"
                android:layout_toEndOf="@id/SongsList_pic_six"
                android:text="@string/song_six" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>